code/kubernetes/grpc-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-gateway
spec:
  selector:
    app: grpc-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
